@@ -87,4 +87,5 @@
   <li>Ed Guzman</li>
   <li>John Kirkwood</li>
   <li>Zdravko Balorda</li>
+  <li>Nick Legg</li>
 </ul>
